# mpi-hello

./: .gitignore  CMakeLists.txt  README.md
src/: hello_mpi.cpp
